@@ -814,11 +814,7 @@ Collection.prototype.find = function find () {
   options.slaveOk = options.slaveOk != null ? options.slaveOk : this.db.slaveOk;
   
   // Set option
-  var o = options;  
-  // console.log("****************************************************************")
-  // console.dir(o)
-  // console.dir(this.readPreference)
-  
+  var o = options;    
   // Support read/readPreference
   if(o["read"] != null) o["readPreference"] = o["read"];
   // Set the read preference
