@@ -285,6 +285,40 @@ Server.prototype.connect = function(dbInstance, options, callback) {
           
           // Parse the body
           mongoReply.parseBody(message, connectionPool.bson, callbackInfo.info.raw, function(err) {
+            if(err != null) {
+              // If pool connection is already closed
+              if(server._serverState === 'disconnected') return;
+              // Set server state to disconnected
+              server._serverState = 'disconnected';
+              // Remove all listeners and close the connection pool
+              server.removeAllListeners();
+              connectionPool.stop(true);              
+
+              // If we have a callback return the error
+              if(typeof callback === 'function') {
+                // ensure no callbacks get called twice
+                var internalCallback = callback;
+                callback = null;
+                // Perform callback
+                internalCallback(new Error("connection closed due to parseError"), null);
+              } else if(server.isSetMember()) {
+                if(server.listeners("parseError") && server.listeners("parseError").length > 0) server.emit("parseError", new Error("connection closed due to parseError"), server);
+              } else {
+                if(eventReceiver.listeners("parseError") && eventReceiver.listeners("parseError").length > 0) eventReceiver.emit("parseError", new Error("connection closed due to parseError"), server);
+              }
+              
+              // If we are a single server connection fire errors correctly
+              if(!server.isSetMember()) {
+                // Fire all callback errors
+                _fireCallbackErrors(server, new Error("connection closed due to parseError"));    
+                // Emit error
+                _emitAcrossAllDbInstances(server, eventReceiver, "parseError", server);      
+              }              
+              // Short cut
+              return;
+            }
+
+            // Fetch the callback 
             var callbackInfo = dbInstanceObject._findHandler(mongoReply.responseTo.toString());
             // If we have an error let's execute the callback and clean up all other
             // chained commands
@@ -321,6 +355,39 @@ Server.prototype.connect = function(dbInstance, options, callback) {
         } else if(callbackInfo.callback) {
           // Parse the body
           mongoReply.parseBody(message, connectionPool.bson, callbackInfo.info.raw, function(err) {
+            if(err != null) {
+              // If pool connection is already closed
+              if(server._serverState === 'disconnected') return;
+              // Set server state to disconnected
+              server._serverState = 'disconnected';
+              // Remove all listeners and close the connection pool
+              server.removeAllListeners();
+              connectionPool.stop(true);              
+
+              // If we have a callback return the error
+              if(typeof callback === 'function') {
+                // ensure no callbacks get called twice
+                var internalCallback = callback;
+                callback = null;
+                // Perform callback
+                internalCallback(new Error("connection closed due to parseError"), null);
+              } else if(server.isSetMember()) {
+                if(server.listeners("parseError") && server.listeners("parseError").length > 0) server.emit("parseError", new Error("connection closed due to parseError"), server);
+              } else {
+                if(eventReceiver.listeners("parseError") && eventReceiver.listeners("parseError").length > 0) eventReceiver.emit("parseError", new Error("connection closed due to parseError"), server);
+              }
+              
+              // If we are a single server connection fire errors correctly
+              if(!server.isSetMember()) {
+                // Fire all callback errors
+                _fireCallbackErrors(server, new Error("connection closed due to parseError"));    
+                // Emit error
+                _emitAcrossAllDbInstances(server, eventReceiver, "parseError", server);      
+              }              
+              // Short cut
+              return;
+            }
+
             // Let's record the stats info if it's enabled
             if(server.recordQueryStats == true && server._state['runtimeStats'] != null 
               && server._state.runtimeStats['queryStats'] instanceof RunningStats) {
